# src/routes/friends/index.js
@@ -1,7 +1,0 @@
-const { Router } = require('express');
-
-const router = Router();
-
-router.get('/', (req, res) => res.send())
-
-module.exports = router;
